fix(radio): provide focus ring visibility when tabbing (#1530)
* fix(radio): focus ring visibility
* fix(radio): focus visible added

--- a/components/radio/index.css
+++ b/components/radio/index.css
@@ -413,7 +413,8 @@ governing permissions and limitations under the License.
   }
 
  /* focus ring is focused state */
-  &:focus-ring {
+  &:focus-ring,
+  &:focus-visible {
     + .spectrum-Radio-button {
       &:after {
         border-width: var(--mod-radio-focus-indicator-thickness,
@@ -421,6 +422,10 @@ governing permissions and limitations under the License.
         border-color: var(--highcontrast-radio-focus-indicator-color,
                           var(--mod-radio-focus-indicator-color,
                               var(--spectrum-radio-focus-indicator-color)));
+        border-style: solid;
+
+        width: calc(var(--spectrum-radio-button-control-size) + (var(--spectrum-radio-focus-indicator-gap) * 2));
+        height: calc(var(--spectrum-radio-button-control-size) + (var(--spectrum-radio-focus-indicator-gap) * 2));
       }
     }
   }
